server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  express-prisma-service
spec:
  selector:
    app:  express-prisma
  type:  LoadBalancer
  ports:
    - protocol:  TCP
      port:  80
      targetPort:  3001
